# Project-Architect-agent

./: .env.example  .gitignore  LICENSE  README.md  architecture.excalidraw  pyproject.toml  requirements.txt
src/project_architect/: __init__.py  main.py
src/project_architect/agent/: __init__.py  graph.py  state.py
src/project_architect/agent/nodes/: __init__.py  create_overview.py  finalize.py  outline.py  research_loop.py  understand.py
src/project_architect/config/: __init__.py  settings.py
src/project_architect/tools/: __init__.py  notion_client.py  reader.py  search.py
src/project_architect/utils/: __init__.py  markdown.py  prompts.py
tests/: test_agent.py
tests/test_tools/: test_notion.py  test_reader.py  test_search.py
